<resources>
    <string name="app_name">EZeats 簡單點</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="textNoNetWork">沒有網路</string>
    <string name="textNoTablesFound">沒有桌位</string>

    <string name="textDelete">刪除</string>
    <string name="textDeleteFail">刪除失敗</string>
    <string name="textDeleteSuccess">刪除成功</string>

    <string name="textTableIdIsInvalid">桌位號碼無效</string>
    <string name="textPeopleInvalid">人數無效</string>

    <string name="textPeople">人數</string>
    <string name="textNoTableFound">找不到表格</string>

    <string name="textTableNo">桌位</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textPickPicture">上傳圖片</string>
    <string name="textName">餐點名稱</string>
    <string name="textPrice">餐點價格</string>
    <string name="textContent">餐點內容</string>
    <string name="textInsert">確定新增</string>
    <string name="textCancel">取消</string>
    <string name="textid">菜單編號</string>
    <string name="textMenuId">餐點編號</string>
    <string name="textUpdate">修改</string>
    <string name="textNoNetwork">沒有連結到網路</string>
    <string name="textNOMenu">沒有菜單</string>
    <string name="textidIsInvalid">請輸入菜單編號</string>
    <string name="textnameIsInvalid">請輸入菜單名稱</string>
    <string name="textpriceIsInvalid">請輸入菜單價格</string>
    <string name="textInsertFail">新增失敗</string>
    <string name="textInsertSuccess">新增成功</string>
    <string name="textTakePicture">拍照</string>
    <string name="textNoCameraApp">找不到相機</string>
    <string name="textNoImageCropAppFound">裁切失敗</string>
    <string name="textUpdateFail">修改失敗</string>
    <string name="textUpdateSuccess">修改成功</string>
    <string name="textOrder">訂單</string>
    <string name="textBooking">訂位</string>
    <string name="textBkId">訂位編號</string>
    <string name="textTable">桌位</string>
    <string name="textTime">時段</string>
    <string name="textDate">日期</string>
    <string name="textChild">孩童</string>
    <string name="textAdult">成人</string>
    <string name="textPhone">電話</string>
    <string name="textBack">返回</string>
    <string name="textNoSelectBookingFound">未找到訂位</string>
    <string name="trueStatus" type="id">正確</string>
    <string name="falseStatus" type="id">錯誤</string>
    <string name="textMemberNoFound">未找到會員</string>
    <string name="tvSub">輸入標題</string>
    <string name="tvContent">輸入內容</string>
    <string name="tvMailBox">收件匣</string>
    <string name="tvSUG">意見管理</string>
    <string name="tvSomebody">Name</string>
    <string name="tvTime">Date</string>
    <string name="btReply">回覆</string>
    <string name="tvReply1">請輸入文字</string>
    <string name="btSent">寄出</string>
    <string name="tvTopic">Title</string>
    <string name="tvGuide">導覽</string>
    <string name="btOperate">操作導引</string>
    <string name="btQA"><![CDATA[Q&A]]></string>
    <string name="btGame">小遊戲</string>
    <string name="btBox">意見箱</string>
    <string name="tvSummary">簡介</string>
    <string name="tvIncome">營收統計</string>
    <string name="tvAD">西元年</string>
    <string name="btDay">日營收統計</string>
    <string name="btMonth">月營收統計</string>
    <string name="btYear">年營收統計</string>
    <string name="tvTitle">標題</string>
    <string name="tvNumber">No.1</string>
    <string name="tvUserNumber">內容</string>
    <string name="tvUser">會員編號</string>
    <string name="tvReply">請輸入文字</string>
    <string name="etMemberName">姓名：</string>
    <string name="etTopic">標題：</string>
    <string name="tvCheckM" translatable="false">查看留言</string>
    <string name="tvLeaveM">我要留言</string>
    <string name="textWaiter">服務生</string>
    <string name="textKitch">廚房</string>
    <string name="textManager">經理</string>
    <string name="tvMemberID">意見編號</string>
    <string name="tvNo">NO.</string>
    <string name="textNoTitle">無標題</string>
    <string name="textInputEmail">請輸入E-mail</string>
    <string name="textEmailFormateError">格式錯誤</string>
    <string name="textInputPassword">請輸入密碼</string>
    <string name="textLoginSuccess">登入成功</string>
    <string name="textLoginfail">登入失敗</string>
    <string name="textReplySuccess">回覆成功</string>
    <string name="tvMainContent">意見</string>
    <string name="tvReplyContent">回覆</string>
    <string name="tvIsReply">回覆狀態</string>
    <string name="textNoOrder">沒有訂單</string>
    <string name="textNoStatus">廚房尚未出餐</string>
    <string name="textSelectBooking">訂位</string>
    <string name="textSelectOrder">餐點</string>
    <string name="textNoUser">目前這桌沒使用</string>
    <string name="textEmployee">員工</string>
    <string name="textBox">意見箱</string>
    <string name="textStats">營收統計</string>
    <string name="textMenu">菜單</string>
    <string name="textAllMenuDetail">總覽</string>
    <string name="textMaking">製作中</string>
    <string name="textSending">出餐中</string>
    <string name="textComplete">已送達</string>
    string
</resources>
