<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.manager.Cauculator.IncomeFragment">

    <TextView
        android:id="@+id/tvIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/tvIncome"
        android:textColor="@color/colorText"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btDay"
        android:layout_width="234dp"
        android:layout_height="128dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorTitle"
        android:text="@string/btDay"
        android:textColor="@color/colorText"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIncome" />

    <Button
        android:id="@+id/btMonth"
        android:layout_width="234dp"
        android:layout_height="128dp"
        android:layout_marginTop="43dp"
        android:background="@color/colorTitle"
        android:text="@string/btMonth"
        android:textColor="@color/colorText"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btDay" />

    <Button
        android:id="@+id/btYear"
        android:layout_width="234dp"
        android:layout_height="128dp"
        android:layout_marginTop="43dp"
        android:background="@color/colorTitle"
        android:text="@string/btYear"
        android:textColor="@color/colorText"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btMonth" />

</androidx.constraintlayout.widget.ConstraintLayout>