<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuInsertFragment"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="23dp">

        <ImageView
            android:id="@+id/ivMenu"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/no_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="195dp"
            android:layout_height="49dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivMenu">

            <Button
                android:id="@+id/btTakePicture"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/colorTitle"
                android:text="@string/textTakePicture"
                android:textColor="@color/colorText" />

            <Button
                android:id="@+id/btPickPicture"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:background="@color/colorTitle"
                android:text="@string/textPickPicture"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="398dp"
            android:layout_height="61dp"
            android:layout_margin="20dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="1dp"
            android:textColorHint="@color/colorText"
            app:hintTextAppearance="@style/TextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swStatus">

            <EditText
                android:id="@+id/etId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/textMenuId"
                android:inputType="text"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:theme="@style/MyEditText"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="258dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="397dp"
            android:layout_height="61dp"
            android:layout_margin="20dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/colorText"
            app:hintTextAppearance="@style/TextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <EditText
                android:id="@+id/etName"
                android:layout_width="407dp"
                android:layout_height="40dp"
                android:hint="@string/textName"
                android:inputType="text"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:theme="@style/MyEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="401dp"
            android:layout_height="61dp"
            android:layout_margin="20dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/colorText"
            app:hintTextAppearance="@style/TextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:hint="@string/textPrice"
                android:inputType="phone"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:theme="@style/MyEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="401dp"
            android:layout_height="61dp"
            android:layout_margin="20dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/colorText"
            app:hintTextAppearance="@style/TextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <EditText
                android:id="@+id/etContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textContent"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:textSize="16dp"
                android:theme="@style/MyEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btFinishInsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="1dp"
            android:background="@color/colorTitle"
            android:text="@string/textInsert"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btCancel"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

        <Button
            android:id="@+id/btCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="1dp"
            android:background="@color/colorTitle"
            android:text="@string/textCancel"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

        <Switch
            android:id="@+id/swStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:text="上下架"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btIn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="119dp"
            android:layout_marginBottom="13dp"
            android:background="@color/colorBackground"
            app:layout_constraintBottom_toTopOf="@+id/swStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

